issue with moving navbar to top on smaller screen

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@ body {
   align-content: center;
   flex-direction: column;
   margin-left: 25%;
+  font-family: "Courier New", Courier, monospace;
+}
+#introduction h1 {
+  text-align: center;
+  font-size: 2em;
+}
+
+h1 {
+  text-align: center;
 }
 #nav-bar {
   display: flex;
@@ -19,7 +28,7 @@ body {
   top: 0;
   left: 0;
   padding-top: 60px;
-  background: grey;
+  background: lightgray;
 }
 #navHeader {
   color: black;
@@ -41,7 +50,7 @@ body {
   color: black;
   text-align: center;
   margin: 20px 20px 20px 20px;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
 }
 a:hover {
   background-color: darkgray;
@@ -50,4 +59,33 @@ a:hover {
 a:active {
   background-color: black;
   color: white;
+}
+.main-section {
+  margin-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid black;
+}
+.main-section:last-child {
+  border-bottom: none;
+}
+pre {
+  background-color: lightgrey;
+  width: 100%;
+  border: 1px solid black;
+}
+@media (max-width: 900px) {
+  #nav-bar {
+    display: flex;
+    justify-content: flex-start;
+    align-content: space-between;
+    flex-direction: row;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    padding-top: 60px;
+    background: lightgray;
+  }
 }
